# lattes-articles

./: extract_lattes.py  main.py  page.html  pubs.json  pyproject.toml
